# player

./: README.md  build.gradle  settings.gradle
FFmpegSdk/: CMakeLists.txt  build.gradle
FFmpegSdk/src/main/: AndroidManifest.xml
FFmpegSdk/src/main/cpp/: media_ffmpeg_method.cpp  media_frame_get.cpp  media_player.cpp  media_player_20.cpp
FFmpegSdk/src/main/java/com/zh/ffmpegsdk/: MediaFFmpegMethod.java  MediaFrameGet.java  MediaPlayer20.java  VideoFrame.java  VideoPlayer.java
HHPlayer/: build.gradle
HHPlayer/libs/: YuvUtils-release.aar
HHPlayer/src/androidTest/java/com/zh/hhplayer/: ExampleInstrumentedTest.kt
HHPlayer/src/main/java/com/zh/hhplayer/: HHPlayer.kt  PeerConnectionObserver.kt  SdpAdapter.kt  WebRTCPlayer.kt
HHPlayer/src/test/java/com/zh/hhplayer/: ExampleUnitTest.kt
app/: CMakeLists.txt  build.gradle  platform.jks  读我-图形转换问题.txt
app/libs/: Net-3.6.2.aar  hhplayer.aar  ijkplayer-java-release.aar  yuv-tool-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/app/: IESIMAidlInterface.aidl
app/src/main/cpp/: CMakeLists.txt  media_player.cpp  sysconfig.cpp
app/src/main/java/android/app/: ESIMManager.java
app/src/main/java/com/zhanghao/: Camera2Activity.kt
app/src/main/java/com/zhanghao/player/: JavaTest.java  KotlinTest.kt  MainActivity.kt  MyExt.kt  PeerConnectionObserver.kt  PlayerTest.java  PlayerTest2.java  SdpAdapter.kt  VideoPlayer.kt  WebRTCPlayer.kt  ZPermission.kt  ijkPlayerManager.kt
app/src/main/java/com/zhanghao/player/hhplayer/: ImageUtils_hh.java  MyHttpRequest_hh.java  PeerConnectionObserver_hh.java  SdpAdapter_hh.java  WebRTCPlayer_hh.java
app/src/main/res/layout/: activity_camera2.xml  activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
